--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       context: ./config/php-fpm
       dockerfile: Dockerfile
     image: tilapila
-    container_name: app
+    container_name: ${PROJECT_NAME}-app
     restart: unless-stopped
     working_dir: /var/www/
     volumes:
@@ -18,7 +18,7 @@ services:
 
   db:
     image: mariadb:10.4.21
-    container_name: db
+    container_name: ${PROJECT_NAME}-db
     restart: unless-stopped
     environment:
       MYSQL_DATABASE: ${MYSQL_DATABASE}
@@ -32,7 +32,7 @@ services:
 
   nginx:
     image: nginx:alpine
-    container_name: nginx
+    container_name: ${PROJECT_NAME}-nginx
     restart: unless-stopped
     ports:
       - ${APP_PORT}:80
