--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,14 +7,13 @@ services:
         uid: 1000
       context: ./config/php-fpm
       dockerfile: Dockerfile
-    image: tilapila
     container_name: ${PROJECT_NAME}-app
     restart: unless-stopped
     working_dir: /var/www/
     volumes:
       - ${ROOT_DIRECTORY}:/var/www
     networks:
-      - tilapila
+      - lempserver
 
   db:
     image: mariadb:10.4.21
@@ -28,7 +27,7 @@ services:
       SERVICE_TAGS: dev
       SERVICE_NAME: mysql
     networks:
-      - tilapila
+      - lempserver
 
   nginx:
     image: nginx:alpine
@@ -36,14 +35,36 @@ services:
     restart: unless-stopped
     ports:
       - ${APP_PORT}:80
-      - ${APP_PORT_SECURE}:443
+      # - ${APP_PORT_SECURE}:443
     volumes:
       - ${ROOT_DIRECTORY}:/var/www
       - ./config/nginx:/etc/nginx/conf.d/
       - ./config/certs:/etc/nginx/certs
+      - ./config/nginx/site.conf:/etc/nginx/nginx.conf
     networks:
-      - tilapila
+      - lempserver
+
+  elasticsearch:
+    image: elasticsearch:7.9.3
+    container_name: ${PROJECT_NAME}-elasticsearch
+    restart: unless-stopped
+    environment:
+      - node.name=es01_${PROJECT_NAME}
+      - node.master=true
+      - node.data=true
+      - transport.host=localhost  
+      - cluster.name=es-docker-cluster_${PROJECT_NAME}
+      # - discovery.seed_hosts=es02,es03
+      # - cluster.initial_master_nodes=es01,es02,es03
+      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    networks:
+     - lempserver
 
 networks:
-  tilapila:
+  lempserver:
     driver: bridge
