Add postgresql first version

--- a/config/nginx/site.conf
+++ b/config/nginx/site.conf
@@ -1,59 +1,40 @@
-# For more information on configuration, see:
-#   * Official English Documentation: http://nginx.org/en/docs/
-#   * Official Russian Documentation: http://nginx.org/ru/docs/
-
-# user sammy;
-# worker_processes auto;
-# error_log /var/log/nginx/error.log;
-# pid /run/nginx.pid;
-
-# Load dynamic modules. See /usr/share/doc/nginx/README.dynamic.
-
-events {
-  worker_connections  4096;  ## Default: 1024
-}
-
-http{
-    server {
-    listen 80;
-#    listen 443 ssl http2;
-#    server_name kr.bdemo.rminno.net;
-#   server_name nkro.local:80;
+server {
+   listen 80;
+#     listen 443 ssl http2;
+#     server_name studentgroup.ir;
+    root /var/www/public;
+    ssl_certificate       /etc/nginx/certs/yourdomain.com.pem;
+    ssl_certificate_key   /etc/nginx/certs/yourdomain.com.key;
+    add_header X-Frame-Options "SAMEORIGIN";
+    add_header X-Content-Type-Options "nosniff";
 
 
-    # redirect to https
-    # if ($scheme = http) {
-    #    return 301 http://seattlerrc.com/;
-    # }
+    error_log  /var/log/nginx/error.log;
+    access_log /var/log/nginx/access.log;
+    index index.php index.html;
 
-#    ssl_certificate /etc/ssl/khazairugs/ssl-bundle.crt;
-#    ssl_certificate_key /etc/ssl/khazairugs/khazairugs.com.key;
+    charset utf-8;
 
-#    ssl_certificate /etc/letsencrypt/live/khazairugs.com/fullchain.pem;
-#    ssl_certificate_key /etc/letsencrypt/live/khazairugs.com/privkey.pem;
+    location / {
+        try_files $uri $uri/ /index.php?$query_string;
+    }
 
-    # proxy_set_header Host nkro.local:80;
+    location = /favicon.ico { access_log off; log_not_found off; }
+    location = /robots.txt  { access_log off; log_not_found off; }
 
-    set $TEMPMAG_MAGE_ROOT /var/www;
-    include /etc/nginx/conf.d/conf.d/include/tempmag.conf;
+    error_page 404 /index.php;
 
-    # error_log /var/log/nginx/error-magento.log;
-    # access_log /var/log/nginx/access-magento.log main;
+    location ~ \.php$ {
+            try_files $uri =404;
+            fastcgi_split_path_info ^(.+\.php)(/.+)$;
+            fastcgi_pass app:9000;
+            fastcgi_index index.php;
+            include fastcgi_params;
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    }
 
-    client_body_buffer_size     64k;
-    client_header_buffer_size   32k;
-    large_client_header_buffers 4 64k;
-    proxy_buffer_size 256k;
-    proxy_buffers     8 256k;
-    proxy_busy_buffers_size   256k;
-    fastcgi_buffers 8 256k;
-    fastcgi_buffer_size 128k;
-
-}
-
-
-
-include /usr/share/nginx/modules/*.conf;
-
-
+    location ~ /\.(?!well-known).* {
+        deny all;
+    }
+#     return 301 $scheme://$server_name$request_uri;
 }
