--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,68 +3,58 @@ services:
   app:
     build:
       args:
-        user: sammy
+        user: dealer
         uid: 1000
       context: ./config/php-fpm
       dockerfile: Dockerfile
     container_name: ${PROJECT_NAME}-app
-    restart: unless-stopped
+    restart: always
     working_dir: /var/www/
+    environment: 
+      VIRTUAL_HOST: dev.studentgroup.ir
     volumes:
       - ${ROOT_DIRECTORY}:/var/www
     networks:
-      - lempserver
+      - trader
 
   db:
-    image: mariadb:10.4.21
+    image: postgres:bullseye
     container_name: ${PROJECT_NAME}-db
-    restart: unless-stopped
+    volumes:
+      - db_trader:/var/lib/postgresql/data/
+    restart: always
+    expose:
+      - '5432:5432'
     environment:
-      MYSQL_DATABASE: ${MYSQL_DATABASE}
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-      MYSQL_USER: ${MYSQL_USER}
-      SERVICE_TAGS: dev
-      SERVICE_NAME: mysql
+      POSTGRES_DB: ${MYSQL_DATABASE}
+      POSTGRES_PASSWORD: example
+      POSTGRES_USER: ${MYSQL_USER}
     networks:
-      - lempserver
+      - trader
 
   nginx:
     image: nginx:alpine
     container_name: ${PROJECT_NAME}-nginx
-    restart: unless-stopped
+    restart: always
     ports:
-      - ${APP_PORT}:80
-      # - ${APP_PORT_SECURE}:443
+       - ${APP_PORT}:80
+       - ${APP_PORT_SECURE}:443
     volumes:
       - ${ROOT_DIRECTORY}:/var/www
       - ./config/nginx:/etc/nginx/conf.d/
       - ./config/certs:/etc/nginx/certs
-      - ./config/nginx/site.conf:/etc/nginx/nginx.conf
     networks:
-      - lempserver
-
-  elasticsearch:
-    image: elasticsearch:7.9.3
-    container_name: ${PROJECT_NAME}-elasticsearch
-    restart: unless-stopped
-    environment:
-      - node.name=es01_${PROJECT_NAME}
-      - node.master=true
-      - node.data=true
-      - transport.host=localhost  
-      - cluster.name=es-docker-cluster_${PROJECT_NAME}
-      # - discovery.seed_hosts=es02,es03
-      # - cluster.initial_master_nodes=es01,es02,es03
-      - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
+      - trader
+  redis:
+    image: redis:alpine
+    container_name: ${PROJECT_NAME}-redis
+    restart: always
+    expose:
+      - '6379:6379'
     networks:
-     - lempserver
-
+      - trader
+volumes:
+  db_trader:
 networks:
-  lempserver:
+  trader:
     driver: bridge
