--- a/config/nginx/site.conf
+++ b/config/nginx/site.conf
@@ -1,7 +1,7 @@
 server {
-   listen 80;
-#     listen 443 ssl http2;
-#     server_name studentgroup.ir;
+#    listen 80;
+    listen 443 ssl http2;
+    server_name studentgroup.ir;
     root /var/www/public;
     ssl_certificate       /etc/nginx/certs/yourdomain.com.pem;
     ssl_certificate_key   /etc/nginx/certs/yourdomain.com.key;
