--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,8 @@ services:
     image: redis:alpine
     container_name: ${PROJECT_NAME}-redis
     restart: always
+    ports:
+      - 6379:6379
     networks:
       - trader
 volumes:
