--- a/config/nginx/site.conf
+++ b/config/nginx/site.conf
@@ -1,10 +1,11 @@
 server {
-#    listen 80;
-    listen 443 ssl http2;
-    server_name studentgroup.ir;
+   listen 80;
+#     listen 443 ssl http2;
+#     server_name studentgroup.ir;
+#     server_name _;
     root /var/www/public;
-    ssl_certificate       /etc/nginx/certs/yourdomain.com.pem;
-    ssl_certificate_key   /etc/nginx/certs/yourdomain.com.key;
+#     ssl_certificate       /etc/nginx/certs/yourdomain.com.pem;
+#     ssl_certificate_key   /etc/nginx/certs/yourdomain.com.key;
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-Content-Type-Options "nosniff";
 
