Add swoole nginx http config

--- a/config/nginx/site.conf
+++ b/config/nginx/site.conf
@@ -1,41 +1,51 @@
+map $http_upgrade $connection_upgrade {
+    default upgrade;
+    ''      close;
+}
+
 server {
-   listen 80;
-#     listen 443 ssl http2;
-#     server_name studentgroup.ir;
-#     server_name _;
+    listen 80;
+    listen [::]:80;
+    server_name domain.com;
+    server_tokens off;
     root /var/www/public;
-#     ssl_certificate       /etc/nginx/certs/yourdomain.com.pem;
-#     ssl_certificate_key   /etc/nginx/certs/yourdomain.com.key;
-    add_header X-Frame-Options "SAMEORIGIN";
-    add_header X-Content-Type-Options "nosniff";
 
-
-    error_log  /var/log/nginx/error.log;
-    access_log /var/log/nginx/access.log;
-    index index.php index.html;
+    index index.php;
 
     charset utf-8;
 
+    location /index.php {
+        try_files /not_exists @octane;
+    }
+
     location / {
-        try_files $uri $uri/ /index.php?$query_string;
+        try_files $uri $uri/ @octane;
     }
 
     location = /favicon.ico { access_log off; log_not_found off; }
     location = /robots.txt  { access_log off; log_not_found off; }
 
+    access_log /var/log/nginx/trader-access.log;
+    error_log  /var/log/nginx/trader-error.log error;
+
     error_page 404 /index.php;
 
-    location ~ \.php$ {
-            try_files $uri =404;
-            fastcgi_split_path_info ^(.+\.php)(/.+)$;
-            fastcgi_pass app:9000;
-            fastcgi_index index.php;
-            include fastcgi_params;
-            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-    }
+    location @octane {
+        set $suffix "";
 
-    location ~ /\.(?!well-known).* {
-        deny all;
+        if ($uri = /index.php) {
+            set $suffix ?$query_string;
+        }
+
+        proxy_http_version 1.1;
+        proxy_set_header Host $http_host;
+        proxy_set_header Scheme $scheme;
+        proxy_set_header SERVER_PORT $server_port;
+        proxy_set_header REMOTE_ADDR $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+
+        proxy_pass http://127.0.0.1:8000$suffix;
     }
-#     return 301 $scheme://$server_name$request_uri;
 }
