--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,11 +37,11 @@ services:
     container_name: ${PROJECT_NAME}-nginx
     restart: always
     ports:
-       - ${APP_PORT}:80
-       - ${APP_PORT_SECURE}:443
+      - "80:80"
+      - "443:443"
     volumes:
       - ${ROOT_DIRECTORY}:/var/www
-      - ./config/nginx:/etc/nginx/conf.d/
+      - ./config/nginx/laravel/:/etc/nginx/conf.d/
       - ./config/certs:/etc/nginx/certs
     networks:
       - trader
