Added latest mysql as database

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,49 +10,47 @@ services:
     container_name: ${PROJECT_NAME}-app
     restart: always
     working_dir: /var/www/
-    environment: 
-      VIRTUAL_HOST: dev.studentgroup.ir
     volumes:
       - ${ROOT_DIRECTORY}:/var/www
     networks:
-      - trader
+      - ponisha
 
   db:
-    image: postgres:bullseye
+    image: mysql:8-debian
     container_name: ${PROJECT_NAME}-db
     volumes:
-      - db_trader:/var/lib/postgresql/data/
+      - db_ponisha:/var/lib/mysql
     restart: always
     environment:
-      POSTGRES_DB: ${MYSQL_DATABASE}
-      POSTGRES_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      POSTGRES_USER: ${MYSQL_USER}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
     ports:
-      - '5432:5432'
+      - '3306:3306'
     networks:
-      - trader
+      - ponisha
 
   nginx:
     image: nginx:stable
     container_name: ${PROJECT_NAME}-nginx
     restart: always
     ports:
-      - "80:80"
-      - "443:443"
+      - ${APP_PORT}:80
     volumes:
       - ${ROOT_DIRECTORY}:/var/www
-      - ./config/nginx/laravel/:/etc/nginx/conf.d/
+      - ./config/nginx/:/etc/nginx/conf.d/
       - ./config/certs:/etc/nginx/certs
     networks:
-      - trader
+      - ponisha
   redis:
     image: redis:alpine
     container_name: ${PROJECT_NAME}-redis
     restart: always
     networks:
-      - trader
+      - ponisha
 volumes:
-  db_trader:
+  db_ponisha:
 networks:
-  trader:
+  ponisha:
     driver: bridge
